# databricks-demos

./: 1-load-prepare-data.ipynb  1_0___Developer_Track.xlsx  2a-create-ai-forecast.ipynb  README.md
ai-parse-doc-visualizer-app/: .env  .gitignore  README.md  app.py  app_layout.py  databricks.yml  databricks_utils.py  pyproject.toml
ai-parse-doc-visualizer-app/app/: .env-example  app.yaml  app_layout.py  document_renderer.py  requirements.txt
ai-parse-doc-visualizer-app/resources/: app.yml
ai-parse-doc-visualizer-app/setup/: ai_parse_visualizer_app_backend.ipynb
ais-vessel-tracking/: .gitignore  README.md  app.py  databricks.yml  pyproject.toml  requirements.txt
ais-vessel-tracking/data/: Anchorages (1).shx  Anchorages (2).dbf  Anchorages (2).shp
ais-vessel-tracking/processing/: geospatial-data-analysis.ipynb
water-well-spatial-explorer-app/: .env-example  .gitignore  001-setup.ipynb  README.md  app.py  config.py  databricks.yml  layout.py  pyproject.toml  requirements.txt  utils.py
water-well-spatial-explorer-app/app/: app.py  app.yaml  layout.py  requirements.txt  utils.py
water-well-spatial-explorer-app/data/: TermsOfUse.txt  alberta_wdrill_driller_drilling_company.csv  alberta_wdrill_drillers.csv  alberta_wdrill_drilling_companies.csv  alberta_wdrill_other_seals.csv  alberta_wdrill_screens.csv  alberta_wtest_bacterio_details.csv  alberta_wtest_exceedances.csv  alberta_wtest_field_personnel.csv  alberta_wtest_gas_analysis_info.csv  alberta_wtest_gas_details.csv  alberta_wtest_gcdwq_standard.csv  alberta_wtest_iso_analysis_info.csv  (+6 more)
(+87 files in other folders)
