[project]
name = "ai-parse-doc-review-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.3.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "databricks-sdk>=0.73.0",
    "databricks-sql-connector[pyarrow]>=4.2.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.1",
]
