[project]
name = "h3-viz-app"
version = "0.1.0"
description = "Simple H3 vessel activity visualization with Dash"
requires-python = "==3.11.14"
dependencies = [
    "dash>=2.14.0",
    "dash-leaflet>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h3>=3.7.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "databricks-sdk==0.67.0",
    "pyarrow>=12.0.0",
]
