[project]
name = "water-well-spatial-explorer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.3.0",
    "dash-leaflet>=1.1.3",
    "databricks-sdk>=0.73.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
]
